fix: improve hero section layout on small screens

--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -15,7 +15,7 @@
   display: flex;
   margin-bottom: var(--s6);
   min-height: 100vh;
-  padding: var(--s8) 0;
+  padding: var(--s7) 0;
   position: relative;
   width: 100%;
   * {
@@ -24,12 +24,6 @@
 }
 
 .hero__container {
-  // align-items: center;
-  // justify-content: center;
-  // display: flex;
-  // flex-direction: column;
-  // flex-wrap: wrap;
-  
   align-content: center;
   align-items: center;
   justify-items: flex-start;
@@ -38,32 +32,16 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   gap: var(--s5);
-  margin-top: var(--s8);
   margin: 0 auto;
   max-width: var(--contentMaxWidth);
   padding: 0 var(--s3);
   width: 100%;
 }
 
-// .hero__content {
-//   align-items: flex-start;
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%;
-
-//   * + * {
-//     margin-top: var(--s5);
-//   }
-// }
-
 .hero__title {
   grid-column: 1 / 3;
   grid-row:  1 / 2;
   margin-left: -2px;
-}
-
-.hero__span {
-  display: block;
 }
 
 .hero__text {
@@ -99,28 +77,28 @@
   .hero__container {
     align-content: center;
     align-items: center;
+    gap: var(--s3);
     justify-items: center;
   }
 
   .hero__title {
     grid-column: 1 / 4;
-
   }
 
   .hero__text {
     grid-column: 1 / 4;
-    grid-row:  4 / 5;    
+    grid-row:  3 / 4;    
   }
   
   .hero__button {
     text-align: center;
     grid-column: 1 / 4;
-    grid-row:  5 / 6;
+    grid-row:  4 / 5;
   }
 
   .PortraitImageContainer {
     grid-column: 1 / 4;
-    grid-row:  2 / 4;
+    grid-row:  2 / 3;
   }
 }
 
